# s3exchange

./: .env.example  README.md  examples.ipynb  pyproject.toml
.github/workflows/: python-publish.yml
src/s3_exchange/: __init__.py  manifest.py  settings.py  shard.py  store.py  types.py  utils.py  writer.py
src/s3exchange/: exceptions.py  store.py  types.py  writer.py
