[project]
name = "s3-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Valentin Schröter Bonk", email = "vasc9380@th-wildau.de" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "dotenv>=0.9.9",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
